unpackaged/objects/Batch__c.object
<CustomObject>
    <fields>
        <fullName>Batch_id__c</fullName>
        <displayFormat>BC-{0000}</displayFormat>
        <externalId>true</externalId>
        <label>Batch id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Batch_joining_date__c</fullName>
        <label>Batch joining date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Batch_size__c</fullName>
        <label>Batch size</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Batch</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Batch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>